Added lastfm to the index

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
    <a href="https://twitter.com/hurt138"><img class="logo-circle" alt="twitter" src="imgs/twitter.jpg" /></a>
    <a href="http://tumblr.sociallysour.org"><img class="logo-circle" alt="tumblr" src="imgs/tumblr.jpg" /></a>
    <a href="https://github.com/hurt138"><img class="logo-circle" alt="github" src="imgs/github.jpg" /></a>
+   <a href="http://last.fm/user/hurt138"><img class="logo-circle" alt="lastfm" src="imgs/lastfm.jpg" /></a>
    <a href="pubkey.asc" target="_blank"><img class="logo-circle" alt="gnupg" src="imgs/gnupg.jpg" /></a>
  </div>
 </div>
