--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
- <title>sociallysour.org</title>
+ <title>hurt138.github.io</title>
  <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
  <link rel="stylesheet" type="text/css" href="style.css" />
- <link rel="shortcut icon" href="https://sociallysour.org/favicon.ico?v=2" />
+ <link rel="shortcut icon" href="https://hurt138.github.io/favicon.ico?v=2" />
 </head>
 <body>
 
